infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: energize
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
